--- a/comp/nav2.html
+++ b/comp/nav2.html
@@ -159,6 +159,7 @@
 }
 
 .thumbnails img {
+    border: 3px solid  ;
     width: 80px;
     height: 50px;
     object-fit: cover;
@@ -209,9 +210,7 @@
         }
 
 /* top-3  */
-.top-3 {
-            /* padding: 2rem 0;  */
-        }
+
         .card {
             width: 75%; 
             max-width: 270px; 
