--- a/project2.html
+++ b/project2.html
@@ -38,7 +38,7 @@
 
         .projects .fyp:not(:hover) {
             /* Optional: You can add a slight zoom-out effect here */
-            /* transform: scale(0.95); */
+            transform: scale(0.95);
         }
     </style>
 
