--- a/comp/footer.html
+++ b/comp/footer.html
@@ -16,19 +16,108 @@
         .footer a {
             color: #b4c0e3;
             text-decoration: none;
+            font-size: 24px;
         }
         .footer a:hover {
             color: white;
             text-decoration: underline;
         }
         .footer .social-icons a {
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+            border-radius: 50%;    
+            background-color: black;    
             font-size: 24px;
             margin-right: 15px;
+            margin-bottom: 10px;
             color: #b4c0e3;
+            text-align: center;
+            display: inline-block;
+            transition: background-color 0.3s, color 0.3s;
         }
         .footer .social-icons a:hover {
             color: white;
+            background-color: #1d2f6f;
         }
+        .footer button{
+            font-weight:500; 
+            background-color: #0a2151;
+            color:#A91B22;
+        }
+        .footer .btn:hover {
+            background-color: #1d2f6f;
+            color: white;
+            border-color: #1d2f6f;
+        }
+        @media (max-width: 768px) {
+            .footer .col-md-3 {
+                margin-bottom: 20px;
+            }
+            .footer .social-icons {
+                text-align: center;
+            }
+        }
+        @media (max-width: 576px) {
+            .footer h5 {
+                text-align: center;
+            }
+            .footer .social-icons a {
+                margin-right: 10px;
+                font-size: 20px;
+                width: 40px;
+                height: 40px;
+                line-height: 40px;
+            }
+            .footer a {
+                margin-right: 10px;
+                font-size: 20px;
+            }
+            .footer .social-icons {
+                text-align: center;
+                margin-bottom: 20px;
+            }
+            .footer .btn {
+                display: block;
+                margin: 0 auto;
+            }
+            }
+            .last {
+                padding-top: 0.8rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: #000;
+                height: 55px;
+                color: #fff;
+                font-size: 16px;
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .last a {
+                color: #b4c0e3;
+                text-decoration: none;
+                font-weight: bold;
+            }
+            .last a:hover {
+                color: #1d2f6f;
+                text-decoration: underline;
+            }
+            @media (max-width: 768px) {
+                .last {
+                    height: auto;
+                    padding: 1rem;
+                }
+                .last p {
+                    margin: 0;
+                    font-size: 14px;
+                }
+                .last a {
+                    display: block;
+                    margin-top: 5px;
+                }
+}
     </style>
 </head>
 <body>
@@ -36,18 +125,17 @@
 <!-- Footer -->
 <footer class="footer">
     <div class="container">
-        <div class="row">
-            <div class="col-md-3">
+        <div class="row justify-content-center">
+            <div class="col-md-3 col-12 col-lg-4">
                 <h5>Follow Us on Social Media</h5>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-12 col-lg-4">
                 <h5>Other Links</h5>
                 <ul class="list-unstyled">
                     <li><a href="#">Societies & Clubs</a></li>
@@ -55,31 +143,9 @@
                     <li><a href="#">Scholarships and Financial Aid</a></li>
                     <li><a href="#">Downloads</a></li>
                     <li><a href="#">Vehicles and Routes</a></li>
-                    <li><a href="#">Prospectus</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">FAQs</a></li>
-                    <li><a href="#">Harassment at Workplace</a></li>
-                    <li><a href="#">QEC Activities</a></li>
-                    <li><a href="#">University Management</a></li>
                 </ul>
             </div>
-            <div class="col-md-3">
-                <h5>Explore MAJU</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#">About MAJU</a></li>
-                    <li><a href="#">Chancellor's Message</a></li>
-                    <li><a href="#">Portal</a></li>
-                    <li><a href="#">Student Hand Book</a></li>
-                    <li><a href="#">Undergraduate Regulations</a></li>
-                    <li><a href="#">MS Regulations</a></li>
-                    <li><a href="#">PhD Regulations</a></li>
-                    <li><a href="#">General Policies</a></li>
-                    <li><a href="#">Student's Discipline</a></li>
-                    <li><a href="#">University Dress Code</a></li>
-                    <li><a href="#">Academic Calendar</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-12 col-lg-4">
                 <h5>Contact Information</h5>
                 <p>
                     Mohammad Ali Jinnah University,<br>
@@ -91,11 +157,19 @@
                     <i class="fas fa-envelope"></i> info@jinnah.edu<br>
                     <i class="fas fa-fax"></i> +92-21-3431-1327
                 </p>
-                <a href="#" class="btn btn-outline-light">Contact Us</a>
+                <button class="btn btn-outline-light" >Contact Us</button>
+
             </div>
         </div>
     </div>
 </footer>
+
+
+<section class="last" >
+    <p>
+        All rights reserved by   <a href="">@Muhammad Ali Jinnah University</a> 
+    </p>
+</section>
 
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
