working on sidebar and navigation bar

--- a/404.html
+++ b/404.html
@@ -52,10 +52,7 @@
     <div class="container">
         <h1>404</h1>
         <p>Oops! The page you're looking for cannot be found.</p>
-        <div class="search-bar">
-            <input type="search" placeholder="Search the site...">
-        </div>
-        <p>Or go back to the <a href="/">homepage</a>.</p>
+        <p> Go back to the <a href="/">homepage</a>.</p>
     </div>
 </body>
 </html>
