--- a/modal5.html
+++ b/modal5.html
@@ -63,7 +63,7 @@
 /* Modal content styles */
 .modal-content {
     position: relative;
-    background: rgba(255, 255, 255, 0.8); /* White with transparency */
+    background: rgba(255, 255, 255, 0.9); /* White with transparency */
     margin: 5% auto;
     padding: 15px;
     border: none;
@@ -139,6 +139,7 @@
 }
 
 .modal-body {
+    color: #444;
     padding: 20px;
     animation: fadeIn 0.6s ease-in-out; /* Fade-in effect for body */
 }
