--- a/modal3.html
+++ b/modal3.html
@@ -27,7 +27,7 @@
             transition: transform 0.3s ease-in-out;
         }
         .card:hover img {
-            transform: scale(1.3); 
+            transform: scale(1.1); 
         }
        
         @media (max-width: 576px) {
@@ -63,7 +63,7 @@
 
         .modal-content {
             position: relative;
-            background: rgba(255, 255, 255, 0.8); /* White with transparency */
+            background: rgba(255, 255, 255, 0.9); /* White with transparency */
             margin: 5% auto;
             padding: 15px;
             border: none;
@@ -75,17 +75,14 @@
         }
 
         .modal-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between; /* Align items to the ends */
-            padding: 15px;
-            background: linear-gradient(135deg, #4e54c8, #8f94fb); /* Elegant gradient */
-            border-radius: 12px 12px 0 0; /* Smooth rounded corners at the top */
-            color: white; /* White text for contrast */
-            font-family: 'Poppins', sans-serif; /* Modern, clean font */
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3); /* Enhanced shadow for depth */
-            position: relative;
-        }
+  display: flex;
+  align-items: baseline; /* Align items to the baseline */
+  border-bottom: 5px solid #ddd;
+  padding-bottom: 12px;
+  /* border-radius: 25px; */
+  background: rgba(255, 255, 255, 0.8); /* Ensure header background is readable */
+}
+
 
         .modal-header h2 {
             font-size: 26px;
@@ -95,11 +92,11 @@
             text-transform: uppercase; /* All caps for emphasis */
             letter-spacing: 1px; /* Spacing between letters */
             flex-grow: 1; /* Ensure the title takes up space */
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4); /* Subtle text shadow for better readability */
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
         }
 
         .close {
-            color: #f8f9fa; /* Lighter white color for contrast */
+            color: #333; 
             font-size: 30px;
             font-weight: 700;
             cursor: pointer;
@@ -125,6 +122,7 @@
         .modal-body {
             padding: 20px;
             animation: fadeIn 0.6s ease-in-out; /* Fade-in effect for body */
+            color: #444;
         }
 
         .modal-image {
@@ -136,9 +134,9 @@
             transition: transform 0.3s ease-in-out; /* Smooth zoom effect on hover */
         }
 
-        .modal-image:hover {
-            transform: scale(1.05); /* Slight zoom effect */
-        }
+        /* .modal-image:hover {
+            transform: scale(1.05);
+        } */
 
         .modal-description {
             font-size: 16px;
