--- a/comp/jumbo.html
+++ b/comp/jumbo.html
@@ -104,9 +104,9 @@
         .img-right {
             width: 100%;
             height: auto;
+            box-shadow: 15px 10px 20px rgba(0, 0.5, 0, 25);
             max-width: 400px; /* Adjust as needed */
         }
-
         .content-area {
             display: flex;
             align-items: center;
@@ -139,7 +139,7 @@
                             <a href=""><i class="fa-solid fa-arrow-down"></i></a>
                         </div>
                         <div class="image-container">
-                            <img src="../" alt="Image" class="img-right">
+                            <img src="../assets/shutterstock_1982834243-1-scaled.webp" alt="Image" class="img-right">
                         </div>
                     </div>
                 </div>
