make sidebar responsive

--- a/comp/navvv.html
+++ b/comp/navvv.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- bootstrap links -->
-    <link rel="stylesheet" href="../bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <!-- bootstrap link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
     <style>
         /* Your existing styles */
         .navbar {
@@ -181,11 +181,15 @@
             width: 100%;
             position: relative;
             transition: max-height 0.3s ease-in-out, padding 0.3s ease-in-out;
+            visibility: hidden;
+            opacity: 0;
         }
 
         .dropdown-menu-custom.show {
-            max-height: 200px; /* Adjust according to the number of items */
+            max-height: 200px;
             padding: 10px 0;
+            visibility: visible;
+            opacity: 1;
         }
 
         .dropdown-menu-custom a {
@@ -204,6 +208,11 @@
             font-size: 0.8rem;
             color: #333;
             margin-left: 10px;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .dropdown-menu-custom.show ~ .dropdown-toggle-icon {
+            transform: rotate(180deg);
         }
 
         .offcanvas-footer {
@@ -215,7 +224,7 @@
         }
 
         .offcanvas-footer a {
-            color: #d62c1f;
+            color: #751009;
             text-decoration: none;
         }
 
@@ -229,17 +238,17 @@
         }
 
         .offcanvas-body::-webkit-scrollbar {
-            width: 8px;
+            width: 5px;
         }
 
         .offcanvas-body::-webkit-scrollbar-track {
             background: #f5f6fa;
-            border-radius: 8px;
+            border-radius: 15px;
         }
 
         .offcanvas-body::-webkit-scrollbar-thumb {
             background: #d62c1f;
-            border-radius: 8px;
+            border-radius: 15px;
         }
 
         /* Hidden checkboxes for dropdowns */
@@ -248,21 +257,19 @@
         }
 
         .dropdown-toggle:checked + .dropdown-menu-custom {
-            max-height: 200px; /* Adjust according to the number of items */
+            max-height: 200px;
             padding: 10px 0;
         }
     </style>
+</head>
 
 <body>
-
     <div class="container">
         <div class="row m-5">
             <div id="navvv">
                 <nav class="navbar navbar-light bg-light fixed-top">
                     <div class="container-fluid ">
-
                         <div class="header d-flex justify-content-between">
-
                             <div class="mytoggle d-flex">
                                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -283,8 +290,8 @@
                                     <img src="../assets/oric.jpg" alt="Maju logo">
                                 </div>
                             </div>
-
                         </div>
+
                         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                             aria-labelledby="offcanvasNavbarLabel">
                             <div class="offcanvas-header">
@@ -341,7 +348,7 @@
                                 </ul>
                             </div>
                             <div class="offcanvas-footer">
-                                <p>Our official site <a href="#">Maju</a></p>
+                                <p>&copy; 2024 MAJU. <a href="#">All rights reserved.</a></p>
                             </div>
                         </div>
                     </div>
@@ -350,31 +357,45 @@
         </div>
     </div>
 
-    <!-- bootstrap links -->
+    <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const dropdowns = document.querySelectorAll('.nav-item');
-
-            dropdowns.forEach(dropdown => {
-                dropdown.querySelector('.nav-link').addEventListener('click', function (e) {
-                    e.preventDefault();
-
-                    const currentlyOpenDropdown = document.querySelector('.nav-item .dropdown-menu-custom.show');
-                    const clickedDropdownMenu = this.nextElementSibling;
-
-                    if (currentlyOpenDropdown && currentlyOpenDropdown !== clickedDropdownMenu) {
-                        currentlyOpenDropdown.classList.remove('show');
+        document.addEventListener('DOMContentLoaded', function () {
+            const dropdownLinks = document.querySelectorAll('.nav-item .nav-link');
+            dropdownLinks.forEach(link => {
+                link.addEventListener('click', function () {
+                    const dropdownMenu = this.nextElementSibling;
+                    if (dropdownMenu.classList.contains('show')) {
+                        dropdownMenu.classList.remove('show');
+                    } else {
+                        document.querySelectorAll('.dropdown-menu-custom').forEach(menu => {
+                            menu.classList.remove('show');
+                        });
+                        dropdownMenu.classList.add('show');
                     }
-
-                    clickedDropdownMenu.classList.toggle('show');
                 });
+            });
+
+            // Close dropdowns when clicking outside
+            document.addEventListener('click', function (event) {
+                if (!event.target.closest('.nav-item')) {
+                    document.querySelectorAll('.dropdown-menu-custom').forEach(menu => {
+                        menu.classList.remove('show');
+                    });
+                }
+            });
+
+            // Prevent body scroll when offcanvas is open
+            const offcanvas = document.getElementById('offcanvasNavbar');
+            offcanvas.addEventListener('show.bs.offcanvas', function () {
+                document.body.style.overflow = 'hidden';
+            });
+            offcanvas.addEventListener('hidden.bs.offcanvas', function () {
+                document.body.style.overflow = '';
             });
         });
     </script>
-
 </body>
 
 </html>
