--- a/comp/jumbo2.html
+++ b/comp/jumbo2.html
@@ -58,7 +58,7 @@
             box-shadow: 0 5px 15px rgba(214, 44, 31, 0.3);
         }
 
-        .fa-arrow-down {
+        .fa-chevron-down {
             position: absolute;
             left: 16rem;
             bottom: 6rem;
@@ -119,7 +119,7 @@
                         <button class="btn btn-danger btn-lg" type="button">
                             MBA
                         </button>
-                        <a href=""><i class="fa-solid fa-arrow-down"></i></a>
+                        <a href=""><i class="fa-solid fa-chevron-down"></i></a>
                     </div>
                 </div>
             </div>
